# haskell.from.first.principles

./: README.md
algs-ds/: fib.hs
chapter01/: definitions.md  exercises.md  resources.md
chapter02/: exercises.md  resources.md
chapter02/exercise.files/: waxOn.with.where.clause.hs
chapter02/mid.chapter.exercises/: FunctionWithWhere.hs  (+2 more)
chapter03/: definitions.md  exercise.md  exercises.md
chapter04/: definitions.md  exercise.md  exercises.md
chapter05/: definitions.md  exercises.md  resources.md
chapter06/: definitions.md  exercises.md  resources.md
chapter07/: definitions.md  exercises.md  resources.md
chapter08/: definitions.md  exercises.md
chapter09/: definitions.md  exercises.md  resources.md
chapter10/: definitions.md  exercises.md  resources.md  summary.md
chapter11/: definitions.md  exercises.md
chapter12/: definitions.md  exercises.md
chapter13/: exercises.md  resources.md
chapter13/projects/hangman/: README.md  hangman.cabal
chapter13/projects/hangman/src/: Main.hs
chapter14/: definitions.md  exercises.md  resources.md
chapter14/projects/multiplication/: Multiplication.hs  multiplication.cabal
chapter15/: definitions.md  exercises.md  resources.md
chapter16/: definitions.md  exercises.md  resources.md
chapter17/: definitions.md  exercises.md  resources.md
chapter18/: definitions.md  exercises.md  resources.md
chapter19/: exercises.md  resources.md
chapter20/: exercises.md  resources.md
chapter21/: exercises.md  resources.md
chapter22/: definitions.md  exercises.md  resources.md
chapter23/: exercises.md
(+155 files in other folders)
