name:           multiplication
version:        0.1.0.0
license-file:   LICENCE
author:         alirezaghey
maintainer:     sky@isfalling.org
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
  exposed-modules:  Multiplication
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && < 5
                  , hspec
hs-source-dirs:     .
default-language:   Haskell2010
 
